CHANGELOG

2.0.12
UTILS:
* pa_rule-edit - introduce new 'filter=(from has.same.to.zone)'/'filter=(to has.same.from.zone)'
* pa_device-edit - introduce new actions=DeviceGroup-remove / actions=AddressStore-rewrite
* pa_key-manager - introduce argument 'user' and 'pw' to create PAN-OS API-key without CLI interaction

BUGFIX:

GENERAL:
* move from print to PH::print_stdout - in preparation for JSON response, some missing parts fixed


2.0.11 (20210915)
UTILS:
* pa_key-manager - improve debugapi, to display also testAPI command - extend help with argument shadow-apikeynohidden for PAN-OS <9.0

BUGFIX:
* class PanAPIConnector - create PAN-OS XML API key
* class SecurityRule - [thanks to Brian Trost for finding this] if XMLNode service is not available also add <member>any</member> and not only an empty XML node <service\>
* framework | class PanAPIConnector - fix for hidden PW prompt on Windows systems

GENERAL:
* test | remove ssl-tls-service-profile on all test config files


2.0.10 (20210907)
UTILS:
* move to the general PH::print_stdout
* introducing script pan-os-php.php with alias pan-os-php - used as a single entry script

BUGFIX:
* pa_rule-edit | bugfix 'filter=(service is.udp/is.udp.only/is.tcp/is.tcp.only)

GENERAL:


2.0.9 (20210903)
UTILS:
* pa_application-edit | introduce actions=move
* pa_rule-edit actions=exporttoexcel - extend with rule target information
* introduce pa_threat - actions=display and filters
* pa_service-edit | actions=exportToExcel - add timeout value
* pa_diff - extend to display rule order changes

BUGFIX:
* pa_application-edit | class UTIL fix for deviceType FAWKES to display predefined app
* class AddressGroup | method includedInIP4Network return 0 instead of 1 if Addressgroup has no members
* class RuleStore | method resultingPostRuleSet() - for Panorama shared now postRule is only return once instead of duplicate